// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`data loaded snapshot 1`] = `
<div>
  <div>
    <h2>
      Dashboard
    </h2>
    <ul>
      <li>
        Apple
      </li>
      <li>
        Banana
      </li>
    </ul>
  </div>
</div>
`;

exports[`empty snapshot 1`] = `
<div>
  <h3>
    No data available
  </h3>
</div>
`;

exports[`error snapshot 1`] = `
<div>
  <h3>
    Error occurred
  </h3>
</div>
`;

exports[`loading snapshot 1`] = `
<div>
  <h3>
    Loading...
  </h3>
</div>
`;
